--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <a class="nav-link" href="/salud/">Salud</a>
                             </li>
                             <li class="nav-item px-2 text-uppercase hidden-lg-up">
-                                <a class="nav-link text-primary" href="https://www.ictiva.com/tarifas/?home=landinggimnasio"><strong>30% DTO</strong></a>
+                                <a class="nav-link text-primary" href="https://www.ictiva.com/tarifas/?home=landinggimnasio"><strong>TARIFAS</strong></a>
                             </li>
                         </ul>
                     </div>
@@ -164,7 +164,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="col-5 no-padding bg-white">
                 <ul class="row justify-content-end mt-3 mt-sm-1 mb-0 mr-1 mr-md-2 p-0 h-100 align-items-start menu-mob">
                     <li class="bg-grey p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="text-dark btn text-uppercase" href="https://www.ictiva.com/tarifas/?home=landinggimnasio"><strong>30% DTO</strong></a>
+                        <a class="text-dark btn text-uppercase" href="https://www.ictiva.com/tarifas/?home=landinggimnasio"><strong>TARIFAS</strong></a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
                         <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU CAMBIO</a>
@@ -181,7 +181,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <header class="bg-gym d-flex align-items-center section-header-video">
         <div class="row align-items-center h-100 m-0 w-100 bg-video">
             <div class="col text-center no-padding promo">
-                <p class="text-uppercase text-white h4 font-weight-bold p-3 mb-4 mt-2" style="background-color: rgba(229,117,50,.8);">Últimos días - 30% dto - Código: FBK30</p>
+                <!-- <p class="text-uppercase text-white h4 font-weight-bold p-3 mb-4 mt-2" style="background-color: rgba(229,117,50,.8);">Últimos días - 30% dto - Código: FBK30</p> -->
                 <!-- <p class="text-uppercase text-primary h4 pt-3 pb-4 mb-4" style="background-color: rgba(0,0,0,.4);"><strong>Últimos días</strong> - Código 30% dto: <strong>NA19</strong></p> -->
                 <h1 class="display-1 text-white text-uppercase text-shadow pt-5">Gimnasio Online</h1>
                 <!--<p class="py-1 py-sm-3 py-lg-4 text-white" style="font-size: 2rem;">25 disciplinas diferentes. Descúbrelas!</p>-->
