--- a/salud.html
+++ b/salud.html
@@ -91,7 +91,7 @@
         border-bottom: 24px solid #e57532;
     }
     header.bg-landing{        
-        background-image: url(homes/img/img-pilates/pilates-home.jpg);
+        background-image: url(/homes/img/img-pilates/pilates-home.jpg);
         background-position: top center;
         background-size: cover;
         min-height: 90vh;
@@ -144,7 +144,7 @@
     }
     @media (max-width: 767px){
         /*header.bg-landing{        
-            background-image: url(homes/img/img-landing/yoga_portada-movil.jpg);
+            background-image: url(/homes/img/img-landing/yoga_portada-movil.jpg);
             background-position: top center;
             background-size: cover;
             min-height: 90vh;
@@ -223,7 +223,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
     <div id="menu-wrap" class="container-fluid bg-white fixed-top">
         <div class="row my-2">
-            <nav class="navbar navbar-toggleable-md navbar-light col-7 bg-white">
+            <nav class="navbar navbar-toggleable-md navbar-light col-6 bg-white">
                 <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse" data-target="#navbarExample" aria-controls="navbarExample" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-bg-icon"></span>
                 </button>
@@ -240,19 +240,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <a class="nav-link" href="/salud/">Salud</a>
                             </li>
                             <li class="nav-item px-2 text-uppercase hidden-lg-up">
-                                <a class="nav-link text-primary" href="https://www.ictiva.com/tarifas/?home=landingsalud"><strong>TARIFAS</strong></a>
+                                <a class="nav-link text-primary" href="https://www.ictiva.com/tarifas/?home=landingsalud"><strong>40% DTO</strong></a>
                             </li>
                         </ul>
                     </div>
                 </div>
             </nav>
-            <div class="col-5 no-padding bg-white">
+            <div class="col-6 no-padding bg-white">
                 <ul class="row justify-content-end mt-3 mt-sm-1 mb-0 mr-1 mr-md-2 p-0 h-100 align-items-start menu-mob">
                     <li class="bg-grey p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="btn text-dark text-uppercase" href="https://www.ictiva.com/tarifas/?home=landingsalud"><strong>TARIFAS</strong></a>
+                        <a class="btn text-dark text-uppercase" href="https://www.ictiva.com/tarifas/?home=landingsalud"><strong>40% DTO</strong></a>
                     </li>
-                    <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down d-none">
-                        <a class="btn text-white text-uppercase" href="https://www.ictiva.com/tarifas/?home=salud">INICIA TU ENTRENAMIENTO</a>
+                    <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
+                        <a class="btn text-white text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=salud">INICIA TU ENTRENAMIENTO</a>
                     </li>
                     <li class="bg-darkgrey p-0 py-sm-2 p-xl-2">
                         <a class="btn text-white text-uppercase" href="https://www.ictiva.com/usuarios/login/">Acceso Usuarios</a>
