--- a/ejercicios-para-adelgazar-tarifas.html
+++ b/ejercicios-para-adelgazar-tarifas.html
@@ -109,10 +109,10 @@
             <div class="col-8 col-lg-4 no-padding bg-white">
                 <ul class="row justify-content-end mt-3 mt-sm-1 mb-0 mr-1 mr-md-2 p-0 h-100 align-items-start menu-mob">
                     <li class="bg-grey p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="text-dark btn btn-double text-uppercase" href="https://www.ictiva.com/tarifas/?home=gimnasio">TARIFAS</a>
+                        <a class="text-dark btn btn-double text-uppercase" href="https://www.ictiva.com/tarifas/?home=gad">30% DTO</a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2">
-                        <a class="text-white btn btn-double text-uppercase" href="https://www.ictiva.com/tarifas/?home=gimnasio">Inicia tu Entrenamiento</a>
+                        <a class="text-white btn btn-double text-uppercase" href="https://www.ictiva.com/tarifas/?home=gad">Inicia tu Entrenamiento</a>
                     </li>
                 </ul>
             </div>
@@ -122,16 +122,16 @@
     <header class="bg-gym d-flex align-items-center section-header-video">
         <div class="row align-items-center h-100 m-0 w-100 bg-video">
             <div class="col text-center no-padding promo">
-                <p class="text-uppercase text-white h4 pt-3 pb-4 mb-5" style="background-color: rgba(0,0,0,.4);"><strong class="h1 text-primary">Código 20% dto.: <span class="font-weight-bold">ADE20</span></strong><br>Últimos días</p>
+                <p class="text-uppercase text-white h4 pt-3 pb-4 mb-5" style="background-color: rgba(0,0,0,.4);"><strong class="h1 text-primary">Código 30% dto.: <span class="font-weight-bold">GAD30</span></strong><br>Últimos días</p>
                 <h1 class="display-1 text-white text-uppercase text-shadow less3">Ejercicios Para Adelgazar</h1>
                 <h2 class="text-white font-weight-bold py-5 px-2 less hidden-xs-down">Planes de entrenamiento y dietas para perder peso en casa</h2>
                 <div class="hidden-xs-down">
-                    <p class="my-5"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?utm_source=ejercicios-adelgazar-tarifas-dto&utm_medium=adwords-landing&utm_campaign=adelgazar">Inicia tu Entrenamiento Ahora</a></p>
+                    <p class="my-5"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?home=gad">Inicia tu Entrenamiento Ahora</a></p>
                 </div>
                 <div class="navbar navbar-dark hidden-sm-up" data-toggle="sticky-onscroll">
                   <div class="container no-padding mt-5">
                     <div class="navbar-header">
-                      <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?utm_source=ejercicios-adelgazar-tarifas&utm_medium=adwords-landing&utm_campaign=adelgazar">Inicia tu Entrenamiento Ahora</a></p>
+                      <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?home=gad">Inicia tu Entrenamiento Ahora</a></p>
                     </div>
                   </div>
                 </div>
@@ -215,7 +215,7 @@
                 Para Tonificar<br>
                 Para abdominales</p>
               <p class="py-5">
-                    <a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?utm_source=ejercicios-adelgazar&utm_medium=adwords-landing&utm_campaign=adelgazar">Inicia tu Entrenamiento</a>
+                    <a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/tarifas/?home=gad">Inicia tu Entrenamiento</a>
                 </p>
             </div>
         </div>
@@ -226,8 +226,8 @@
               <h3 class="display-4 py-4 text-uppercase">Rutina de ejercicios para perder peso en casa</h3>
               <p class="lead py-4 text-bigger">Crea tu objetivo, compártelo, reta a tus amigos y haz de ti tu mejor versión.</p>
               <p>Descárgate la aplicación aquí:</p>
-              <a href="https://play.google.com/store/apps/details?id=ictiva.carbonbyte.com.ictiva&?utm_source=ejercicios-adelgazar&utm_medium=adwords-landing&utm_campaign=adelgazar" target="_blank"><img src="homes/img/logos-footer/google-play-badge.png" class="img-fluid img-logo" alt="android app" width="194" height="75"></a>
-              <a href="https://itunes.apple.com/us/app/ictiva-tu-gimnasio-online-de-ejercicios-en-casa/id1217405866?mt=8&utm_source=home&utm_medium=itunes&?utm_source=ejercicios-adelgazar&utm_medium=adwords-landing&utm_campaign=adelgazar" target="_blank"><img src="homes/img/logos-footer/apple-store.png" class="img-fluid img-logo" alt="apple app" width="194" height="75"></a>
+              <a href="https://play.google.com/store/apps/details?id=ictiva.carbonbyte.com.ictiva&?home=gad" target="_blank"><img src="homes/img/logos-footer/google-play-badge.png" class="img-fluid img-logo" alt="android app" width="194" height="75"></a>
+              <a href="https://itunes.apple.com/us/app/ictiva-tu-gimnasio-online-de-ejercicios-en-casa/id1217405866?mt=8&utm_source=home&utm_medium=itunes&?home=gad" target="_blank"><img src="homes/img/logos-footer/apple-store.png" class="img-fluid img-logo" alt="apple app" width="194" height="75"></a>
             </div>
         </div>
     </div>
